--- a/config/sync/core.entity_form_display.taxonomy_term.vih_class_package.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.vih_class_package.default.yml
@@ -4,12 +4,12 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.taxonomy_term.vih_class_package.field_link_taxo
     - field.field.taxonomy_term.vih_class_package.field_metatag
     - field.field.taxonomy_term.vih_class_package.field_vih_banner
     - field.field.taxonomy_term.vih_class_package.field_vih_class_package_color
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_image
     - field.field.taxonomy_term.vih_class_package.field_vih_heading
+    - field.field.taxonomy_term.vih_class_package.field_vih_link_taxo
     - field.field.taxonomy_term.vih_class_package.field_vih_paragraphs
     - field.field.taxonomy_term.vih_class_package.field_vih_subheading
     - taxonomy.vocabulary.vih_class_package
@@ -28,6 +28,7 @@ third_party_settings:
         - name
         - description
         - field_link_taxo
+        - field_vih_link_taxo
         - field_vih_cp_image
         - field_vih_class_package_color
       parent_name: ''
@@ -75,7 +76,6 @@ third_party_settings:
     group_content:
       children:
         - field_vih_heading
-        - field_subheading
         - field_vih_subheading
         - field_vih_paragraphs
       parent_name: ''
@@ -102,14 +102,6 @@ content:
       rows: 5
     third_party_settings: {  }
     region: content
-  field_link_taxo:
-    weight: 15
-    settings:
-      placeholder_url: ''
-      placeholder_title: ''
-    third_party_settings: {  }
-    type: link_default
-    region: content
   field_metatag:
     weight: 18
     settings: {  }
@@ -130,14 +122,14 @@ content:
     region: content
     third_party_settings: {  }
   field_vih_class_package_color:
-    weight: 17
+    weight: 18
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_vih_cp_image:
     type: entity_browser_file
-    weight: 16
+    weight: 17
     settings:
       entity_browser: image_browser
       field_widget_remove: true
@@ -156,6 +148,14 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_vih_link_taxo:
+    type: link_default
+    weight: 16
+    region: content
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
   field_vih_paragraphs:
     weight: 14
     settings:
