--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.teaser.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.teaser.yml
@@ -4,12 +4,12 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.teaser
-    - field.field.taxonomy_term.vih_class_package.field_link_taxo
     - field.field.taxonomy_term.vih_class_package.field_metatag
     - field.field.taxonomy_term.vih_class_package.field_vih_banner
     - field.field.taxonomy_term.vih_class_package.field_vih_class_package_color
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_image
     - field.field.taxonomy_term.vih_class_package.field_vih_heading
+    - field.field.taxonomy_term.vih_class_package.field_vih_link_taxo
     - field.field.taxonomy_term.vih_class_package.field_vih_paragraphs
     - field.field.taxonomy_term.vih_class_package.field_vih_subheading
     - image.style.class_packages_frontpage
@@ -18,6 +18,7 @@ dependencies:
     - image
     - options
     - panelizer
+    - url_embed
 third_party_settings:
   panelizer:
     enable: false
@@ -31,23 +32,29 @@ mode: teaser
 content:
   field_vih_class_package_color:
     type: list_key
-    weight: 2
+    weight: 1
     region: content
     label: hidden
     settings: {  }
     third_party_settings: {  }
   field_vih_cp_image:
     type: image
-    weight: 1
+    weight: 0
     region: content
     label: hidden
     settings:
       image_style: class_packages_frontpage
       image_link: ''
     third_party_settings: {  }
+  field_vih_link_taxo:
+    type: url_embed
+    weight: 5
+    region: content
+    label: above
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   description: true
-  field_link_taxo: true
   field_metatag: true
   field_vih_banner: true
   field_vih_heading: true
