--- a/config/sync/field.field.taxonomy_term.vih_class_package.field_vih_link_taxo.yml
+++ b/config/sync/field.field.taxonomy_term.vih_class_package.field_vih_link_taxo.yml
@@ -1,14 +1,14 @@
-uuid: f4fae8f9-7029-47bb-b2a2-9b1f226873ec
+uuid: a6d536cc-d63c-4e20-8ddd-90540d9dd1b0
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.taxonomy_term.field_link_taxo
+    - field.storage.taxonomy_term.field_vih_link_taxo
     - taxonomy.vocabulary.vih_class_package
   module:
     - link
-id: taxonomy_term.vih_class_package.field_link_taxo
-field_name: field_link_taxo
+id: taxonomy_term.vih_class_package.field_vih_link_taxo
+field_name: field_vih_link_taxo
 entity_type: taxonomy_term
 bundle: vih_class_package
 label: Link
