--- a/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
@@ -4,13 +4,13 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.user_quote.field_paragraph_person_photo
     - field.field.paragraph.user_quote.field_paragraph_text
     - field.field.paragraph.user_quote.field_vih_author
     - field.field.paragraph.user_quote.field_vih_background_color
     - field.field.paragraph.user_quote.field_vih_background_image
     - field.field.paragraph.user_quote.field_vih_heading
     - field.field.paragraph.user_quote.field_vih_link
+    - field.field.paragraph.user_quote.field_vih_person_photo
     - paragraphs.paragraphs_type.user_quote
   module:
     - entity_browser
@@ -23,7 +23,6 @@ third_party_settings:
     group_appearance:
       children:
         - field_vih_background_color
-        - field_background_image
         - field_vih_background_image
       parent_name: ''
       weight: 6
@@ -41,22 +40,9 @@ targetEntityType: paragraph
 bundle: user_quote
 mode: default
 content:
-  field_paragraph_person_photo:
-    type: entity_browser_file
-    weight: 4
-    settings:
-      entity_browser: image_browser
-      field_widget_remove: true
-      selection_mode: selection_append
-      preview_image_style: thumbnail
-      field_widget_edit: true
-      open: false
-      view_mode: default
-    region: content
-    third_party_settings: {  }
   field_paragraph_text:
     type: text_textarea
-    weight: 3
+    weight: 2
     region: content
     settings:
       rows: 5
@@ -64,7 +50,7 @@ content:
     third_party_settings: {  }
   field_vih_author:
     type: string_textfield
-    weight: 2
+    weight: 1
     region: content
     settings:
       size: 60
@@ -105,6 +91,19 @@ content:
     third_party_settings: {  }
     type: link_default
     region: content
+  field_vih_person_photo:
+    type: entity_browser_file
+    weight: 4
+    settings:
+      entity_browser: image_browser
+      field_widget_edit: true
+      field_widget_remove: true
+      view_mode: default
+      preview_image_style: thumbnail
+      open: true
+      selection_mode: selection_append
+    region: content
+    third_party_settings: {  }
 hidden:
   created: true
   status: true
