VI-179 paragraph Udtalelse field_vih_text css and settings

--- a/config/sync/field.field.paragraph.user_quote.field_vih_text.yml
+++ b/config/sync/field.field.paragraph.user_quote.field_vih_text.yml
@@ -1,14 +1,14 @@
-uuid: e1e6cd8d-9024-4268-a399-2cc10089a2a6
+uuid: 095e26df-e029-4b42-824f-6b93e9b0a033
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_paragraph_text
+    - field.storage.paragraph.field_vih_text
     - paragraphs.paragraphs_type.user_quote
   module:
     - text
-id: paragraph.user_quote.field_paragraph_text
-field_name: field_paragraph_text
+id: paragraph.user_quote.field_vih_text
+field_name: field_vih_text
 entity_type: paragraph
 bundle: user_quote
 label: Tekst
