--- a/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
@@ -4,13 +4,13 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.user_quote.field_paragraph_text
     - field.field.paragraph.user_quote.field_vih_author
     - field.field.paragraph.user_quote.field_vih_background_color
     - field.field.paragraph.user_quote.field_vih_background_image
     - field.field.paragraph.user_quote.field_vih_heading
     - field.field.paragraph.user_quote.field_vih_link
     - field.field.paragraph.user_quote.field_vih_person_photo
+    - field.field.paragraph.user_quote.field_vih_text
     - paragraphs.paragraphs_type.user_quote
   module:
     - entity_browser
@@ -40,14 +40,6 @@ targetEntityType: paragraph
 bundle: user_quote
 mode: default
 content:
-  field_paragraph_text:
-    type: text_textarea
-    weight: 2
-    region: content
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
   field_vih_author:
     type: string_textfield
     weight: 1
@@ -103,6 +95,14 @@ content:
       open: true
       selection_mode: selection_append
     region: content
+    third_party_settings: {  }
+  field_vih_text:
+    type: text_textarea
+    weight: 3
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
     third_party_settings: {  }
 hidden:
   created: true
