--- a/config/sync/core.entity_view_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.user_quote.default.yml
@@ -3,13 +3,13 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.user_quote.field_paragraph_text
     - field.field.paragraph.user_quote.field_vih_author
     - field.field.paragraph.user_quote.field_vih_background_color
     - field.field.paragraph.user_quote.field_vih_background_image
     - field.field.paragraph.user_quote.field_vih_heading
     - field.field.paragraph.user_quote.field_vih_link
     - field.field.paragraph.user_quote.field_vih_person_photo
+    - field.field.paragraph.user_quote.field_vih_text
     - image.style.vih_person_teaser
     - paragraphs.paragraphs_type.user_quote
   module:
@@ -22,13 +22,6 @@ targetEntityType: paragraph
 bundle: user_quote
 mode: default
 content:
-  field_paragraph_text:
-    type: text_default
-    weight: 3
-    region: content
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
   field_vih_author:
     type: string
     weight: 5
@@ -75,11 +68,18 @@ content:
     region: content
   field_vih_person_photo:
     type: image
-    weight: 2
+    weight: 1
     region: content
     label: hidden
     settings:
       image_style: vih_person_teaser
       image_link: ''
+    third_party_settings: {  }
+  field_vih_text:
+    type: text_default
+    weight: 3
+    region: content
+    label: hidden
+    settings: {  }
     third_party_settings: {  }
 hidden: {  }
