--- a/config/sync/field.storage.paragraph.field_vih_user.yml
+++ b/config/sync/field.storage.paragraph.field_vih_user.yml
@@ -1,12 +1,12 @@
-uuid: b3b76b55-5d80-46d6-b00b-8abbe83e7e23
+uuid: 4d2180d5-fa11-42dc-b381-fcc23b99dfc7
 langcode: da
 status: true
 dependencies:
   module:
     - paragraphs
     - user
-id: paragraph.field_paragraph_user
-field_name: field_paragraph_user
+id: paragraph.field_vih_user
+field_name: field_vih_user
 entity_type: paragraph
 type: entity_reference
 settings:
