--- a/config/sync/field.storage.paragraph.field_vih_photo.yml
+++ b/config/sync/field.storage.paragraph.field_vih_photo.yml
@@ -1,4 +1,4 @@
-uuid: c9eefa84-865b-4a82-94f4-04839b33fe3f
+uuid: e92b5610-9636-439d-bb65-df1b4e4aff35
 langcode: da
 status: true
 dependencies:
@@ -6,8 +6,8 @@ dependencies:
     - file
     - image
     - paragraphs
-id: paragraph.field_photo
-field_name: field_photo
+id: paragraph.field_vih_photo
+field_name: field_vih_photo
 entity_type: paragraph
 type: image
 settings:
