--- a/config/sync/core.entity_form_display.paragraph.vih_teacher_class_description.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_teacher_class_description.default.yml
@@ -4,11 +4,11 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.vih_teacher_class_description.field_photo
     - field.field.paragraph.vih_teacher_class_description.field_vih_background_color
     - field.field.paragraph.vih_teacher_class_description.field_vih_background_image
     - field.field.paragraph.vih_teacher_class_description.field_vih_description
     - field.field.paragraph.vih_teacher_class_description.field_vih_heading
+    - field.field.paragraph.vih_teacher_class_description.field_vih_photo
     - field.field.paragraph.vih_teacher_class_description.field_vih_user
     - paragraphs.paragraphs_type.vih_teacher_class_description
   module:
@@ -23,7 +23,7 @@ third_party_settings:
         - field_vih_background_color
         - field_vih_background_image
       parent_name: ''
-      weight: 5
+      weight: 4
       format_type: tab
       format_settings:
         id: ''
@@ -38,19 +38,6 @@ targetEntityType: paragraph
 bundle: vih_teacher_class_description
 mode: default
 content:
-  field_photo:
-    type: entity_browser_file
-    weight: 0
-    settings:
-      entity_browser: image_browser
-      field_widget_edit: true
-      field_widget_remove: true
-      view_mode: default
-      preview_image_style: thumbnail
-      open: true
-      selection_mode: selection_append
-    third_party_settings: {  }
-    region: content
   field_vih_background_color:
     weight: 2
     settings: {  }
@@ -72,7 +59,7 @@ content:
     third_party_settings: {  }
   field_vih_description:
     type: text_textarea
-    weight: 4
+    weight: 3
     region: content
     settings:
       rows: 5
@@ -86,9 +73,22 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_vih_photo:
+    type: entity_browser_file
+    weight: 0
+    settings:
+      entity_browser: image_browser
+      field_widget_edit: true
+      field_widget_remove: true
+      view_mode: default
+      preview_image_style: thumbnail
+      open: true
+      selection_mode: selection_append
+    region: content
+    third_party_settings: {  }
   field_vih_user:
     type: entity_reference_autocomplete
-    weight: 3
+    weight: 2
     region: content
     settings:
       match_operator: CONTAINS
