--- a/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.embedded.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.embedded.yml
@@ -4,11 +4,11 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.paragraph.embedded
-    - field.field.paragraph.vih_teacher_class_description.field_photo
     - field.field.paragraph.vih_teacher_class_description.field_vih_background_color
     - field.field.paragraph.vih_teacher_class_description.field_vih_background_image
     - field.field.paragraph.vih_teacher_class_description.field_vih_description
     - field.field.paragraph.vih_teacher_class_description.field_vih_heading
+    - field.field.paragraph.vih_teacher_class_description.field_vih_photo
     - field.field.paragraph.vih_teacher_class_description.field_vih_user
     - image.style.vih_person_teaser
     - paragraphs.paragraphs_type.vih_teacher_class_description
@@ -21,21 +21,21 @@ targetEntityType: paragraph
 bundle: vih_teacher_class_description
 mode: embedded
 content:
-  field_photo:
-    weight: 0
-    label: hidden
-    settings:
-      image_style: vih_person_teaser
-      image_link: ''
-    third_party_settings: {  }
-    type: image
-    region: content
   field_vih_description:
     type: text_default
     weight: 1
     region: content
     label: hidden
     settings: {  }
+    third_party_settings: {  }
+  field_vih_photo:
+    type: image
+    weight: 0
+    region: content
+    label: above
+    settings:
+      image_style: vih_person_teaser
+      image_link: ''
     third_party_settings: {  }
   field_vih_user:
     type: author
