--- a/config/sync/core.entity_form_display.paragraph.list_of_news_teasers.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.list_of_news_teasers.default.yml
@@ -4,10 +4,10 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.list_of_news_teasers.field_tags
     - field.field.paragraph.list_of_news_teasers.field_vih_background_color
     - field.field.paragraph.list_of_news_teasers.field_vih_background_image
     - field.field.paragraph.list_of_news_teasers.field_vih_heading
+    - field.field.paragraph.list_of_news_teasers.field_vih_tags
     - paragraphs.paragraphs_type.list_of_news_teasers
   module:
     - entity_browser
@@ -17,7 +17,6 @@ third_party_settings:
   field_group:
     group_appearance:
       children:
-        - field_background_image
         - field_vih_background_image
         - field_vih_background_color
       parent_name: ''
@@ -36,12 +35,6 @@ targetEntityType: paragraph
 bundle: list_of_news_teasers
 mode: default
 content:
-  field_tags:
-    weight: 2
-    settings: {  }
-    third_party_settings: {  }
-    type: options_select
-    region: content
   field_vih_background_color:
     weight: 6
     settings: {  }
@@ -62,13 +55,19 @@ content:
     region: content
     third_party_settings: {  }
   field_vih_heading:
-    weight: 1
+    weight: 0
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_vih_tags:
+    type: options_select
+    weight: 2
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   created: true
   status: true
