--- a/config/sync/core.entity_form_display.paragraph.video.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.video.default.yml
@@ -4,12 +4,12 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.video.field_video
     - field.field.paragraph.video.field_vih_background_color
     - field.field.paragraph.video.field_vih_background_image
     - field.field.paragraph.video.field_vih_description
     - field.field.paragraph.video.field_vih_heading
     - field.field.paragraph.video.field_vih_highlighted
+    - field.field.paragraph.video.field_vih_video
     - paragraphs.paragraphs_type.video
   module:
     - entity_browser
@@ -39,12 +39,6 @@ targetEntityType: paragraph
 bundle: video
 mode: default
 content:
-  field_video:
-    weight: 4
-    settings: {  }
-    third_party_settings: {  }
-    type: video_embed_field_textfield
-    region: content
   field_vih_background_color:
     weight: 6
     settings: {  }
@@ -65,7 +59,7 @@ content:
     region: content
     third_party_settings: {  }
   field_vih_description:
-    weight: 3
+    weight: 2
     settings:
       rows: 5
       placeholder: ''
@@ -82,11 +76,17 @@ content:
     region: content
   field_vih_highlighted:
     type: text_textfield
-    weight: 2
+    weight: 1
     region: content
     settings:
       size: 60
       placeholder: ''
+    third_party_settings: {  }
+  field_vih_video:
+    type: video_embed_field_textfield
+    weight: 4
+    region: content
+    settings: {  }
     third_party_settings: {  }
 hidden:
   created: true
