VI-179 my_classes_nodes, my_classes_terms views update, unnused fields delete

--- a/config/sync/views.view.my_classes_nodes.yml
+++ b/config/sync/views.view.my_classes_nodes.yml
@@ -1,14 +1,12 @@
 uuid: 24ab5eb7-a7d8-4a6e-857d-4d21bbb8387f
 langcode: da
-status: true
+status: false
 dependencies:
   config:
-    - field.storage.paragraph.field_description
     - paragraphs.paragraphs_type.vih_teacher_class_description
   module:
     - node
     - paragraphs
-    - text
     - user
 id: my_classes_nodes
 label: 'Mine fag - noder'
@@ -96,8 +94,8 @@ display:
             target: ''
             nl2br: false
             max_length: 0
-            word_boundary: false
-            ellipsis: false
+            word_boundary: true
+            ellipsis: true
             more_link: false
             more_link_text: ''
             more_link_path: ''
@@ -134,68 +132,6 @@ display:
           entity_type: node
           entity_field: title
           plugin_id: field
-        field_description:
-          id: field_description
-          table: paragraph__field_description
-          field: field_description
-          relationship: field_paragraphs
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: true
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: text_default
-          settings: {  }
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
         nothing:
           id: nothing
           table: views
@@ -207,7 +143,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<div class=\"boxy\">\n  <div class=\"boxy__heading\">\n    <h3 class=\"boxy__heading__title heading-h5\">{{ title }}</h3>\n  </div>\n  <div class=\"boxy__body\">\n    {{ field_description }}\n  </div>\n</div>"
+            text: "<div class=\"boxy\">\n  <div class=\"boxy__heading\">\n    <h3 class=\"boxy__heading__title heading-h5\">{{ title }}</h3>\n  </div>\n  <div class=\"boxy__body\">\n    {{ field_vih_description }}\n  </div>\n</div>"
             make_link: false
             path: ''
             absolute: false
@@ -247,21 +183,48 @@ display:
           plugin_id: custom
       filters:
         status:
-          value: '1'
+          id: status
           table: node_field_data
           field: status
-          plugin_id: boolean
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: '1'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
           entity_type: node
           entity_field: status
-          id: status
-          expose:
-            operator: ''
-          group: 1
+          plugin_id: boolean
         type:
           id: type
           table: paragraphs_item_field_data
           field: type
-          relationship: field_paragraphs
+          relationship: field_vih_paragraphs
           group_type: group
           admin_label: ''
           operator: in
@@ -303,45 +266,45 @@ display:
           id: created
           table: node_field_data
           field: created
-          order: DESC
-          entity_type: node
-          entity_field: created
-          plugin_id: date
           relationship: none
           group_type: group
           admin_label: ''
+          order: DESC
           exposed: false
           expose:
             label: ''
           granularity: second
+          entity_type: node
+          entity_field: created
+          plugin_id: date
       header: {  }
       footer: {  }
       empty: {  }
       relationships:
-        field_paragraphs:
-          id: field_paragraphs
-          table: node__field_paragraphs
-          field: field_paragraphs
+        field_vih_paragraphs:
+          id: field_vih_paragraphs
+          table: node__field_vih_paragraphs
+          field: field_vih_paragraphs
           relationship: none
           group_type: group
-          admin_label: 'field_paragraphs: Paragraph'
+          admin_label: 'field_vih_paragraphs: Paragraph'
           required: true
           plugin_id: standard
-        field_paragraph_user:
-          id: field_paragraph_user
-          table: paragraph__field_paragraph_user
-          field: field_paragraph_user
-          relationship: field_paragraphs
+        field_vih_user:
+          id: field_vih_user
+          table: paragraph__field_vih_user
+          field: field_vih_user
+          relationship: field_vih_paragraphs
           group_type: group
-          admin_label: 'field_paragraph_user: Bruger'
-          required: true
+          admin_label: 'field_vih_user: User'
+          required: false
           plugin_id: standard
       arguments:
         uid:
           id: uid
           table: users_field_data
           field: uid
-          relationship: field_paragraph_user
+          relationship: field_vih_user
           group_type: group
           admin_label: ''
           default_action: 'not found'
@@ -383,8 +346,7 @@ display:
         - url
         - 'user.node_grants:view'
         - user.permissions
-      tags:
-        - 'config:field.storage.paragraph.field_description'
+      tags: {  }
   embedded_embedded:
     display_plugin: embed
     id: embedded_embedded
@@ -401,5 +363,4 @@ display:
         - url
         - 'user.node_grants:view'
         - user.permissions
-      tags:
-        - 'config:field.storage.paragraph.field_description'
+      tags: {  }
