--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         "drupal/photoswipe": "1.0-beta3",
         "drupal/context": "4.0-beta2",
         "drupal/media_entity_facebook": "2.0-alpha1",
-        "drupal/url_embed": "1.x-dev"
+        "drupal/url_embed": "1.x-dev",
+        "drupal/advagg": "^3.4"
     },
     "repositories": [
         {
