--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -1,6 +1,11 @@
 module:
   admin_toolbar: 0
   admin_toolbar_tools: 0
+  advagg: 0
+  advagg_bundler: 0
+  advagg_css_minify: 0
+  advagg_js_minify: 0
+  advagg_old_ie_compatibility: 0
   bellcom_quickpay_integration: 0
   block: 0
   block_content: 0
