--- a/config/sync/media.type.image.yml
+++ b/config/sync/media.type.image.yml
@@ -1,7 +1,12 @@
 uuid: ada5cee7-0f2a-4eb6-be41-053f551006fb
 langcode: und
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - crop
+third_party_settings:
+  crop:
+    image_field: image
 _core:
   default_config_hash: UbLy1_yBV5jSxil0-k8gV9GiVUg3Oik3hlAJzqeT8YQ
 id: image
