--- a/config/sync/core.entity_view_display.node.vih_event_order.email_teaser.yml
+++ b/config/sync/core.entity_view_display.node.vih_event_order.email_teaser.yml
@@ -35,7 +35,7 @@ content:
     weight: 1
     label: above
     settings:
-      link: true
+      link: false
     third_party_settings: {  }
     type: entity_reference_label
     region: content
@@ -44,7 +44,7 @@ content:
     weight: 0
     label: hidden
     settings:
-      view_mode: embedded
+      view_mode: email_teaser
       link: ''
     third_party_settings: {  }
     region: content
