VI-202 Long course email

--- a/config/sync/core.entity_view_display.node.vih_long_course_order.email_teaser.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_course_order.email_teaser.yml
@@ -213,7 +213,7 @@ content:
     region: content
     label: hidden
     settings:
-      view_mode: embedded
+      view_mode: email_teaser
       link: ''
     third_party_settings: {  }
   field_vih_lco_payment:
